--- a/Week_3/6. Express_Authentication_JWT/.gitignore
+++ b/Week_3/6. Express_Authentication_JWT/.gitignore
@@ -4,6 +4,8 @@ node_modules/
 
 .env
 
+src/uploads/
+
  # ignore content of uploads folder
  uploads/*
  # except one (empty) file to have the folder in version control
