--- a/Week_4/wsk-example-settingup-react/package.json
+++ b/Week_4/wsk-example-settingup-react/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "prop-types": "^15.8.1",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-router": "^7.9.6"
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
